v1.0.3 |
- Soda
	- Updated changelog format
- Soda / Apple.css
	- Added focus-visible to .soda-hover
	- Added pointer cursor to .soda-hover

v1.0.2 | June 9th, 2024
- Added Soda / Apple.css
- Fixed "true-brown" and "true-dark-brown" in Soda / Grape.css

v1.0.1 | June 8th, 2024
- Added Soda / Vanilla.css

v1.0.0 | June 8th, 2024
- Major rewrite
- Added Soda / Lemon.js
- Added Soda / Raspberry.js
- Added Soda / Corn.js
- Added Soda / Grape.css

v1.beta-pre.1 | May 26th, 2024
- Added more flex classes
- Modified fonts classes

v1.beta-pre.0 | May 26th, 2024
- Added basic features